Fix mobile showcase image visibility (Safari flex bug)

--- a/src/app/[lang]/page.module.css
+++ b/src/app/[lang]/page.module.css
@@ -199,6 +199,8 @@
   position: relative;
   width: 100%;
   height: 100%;
+  flex: 1;
+  min-height: inherit;
   border-radius: inherit;
 }
 
